--- a/servoo_sales/report/report_invoice.xml
+++ b/servoo_sales/report/report_invoice.xml
@@ -128,7 +128,7 @@
                                             style="text-align: center;border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0.1cm; padding-right: 0cm">
                                         <font>
                                             <b>
-                                                <span t-field="o.name"/>
+                                                <span t-field="o.apm_reference"/>
                                             </b>
                                         </font>
                                     </td>
