Ajout du champ numéro de registre de commerce sur le partenaire Affichage du numéro de registre de commerce sur le devis et la facture

--- a/servoo_sales/report/sale_report_templates.xml
+++ b/servoo_sales/report/sale_report_templates.xml
@@ -186,9 +186,14 @@
                                         </t>
                                     </font>
                                 </br>
-                                <!--                            <p>-->
-                                <!--                                <font >RC/DLA/2018/B/2764</font>-->
-                                <!--                            </p>-->
+                                <br>
+                                    <font>
+                                        <t t-if="doc.partner_id.commercial_register_number">
+                                            RCCM :
+                                            <span t-field="doc.partner_id.commercial_register_number"/>
+                                        </t>
+                                    </font>
+                                </br>
                             </td>
                         </tr>
                         <tr valign="top">
