--- a/servoo_sales/report/report_invoice.xml
+++ b/servoo_sales/report/report_invoice.xml
@@ -188,9 +188,14 @@
                                                 </t>
                                             </font>
                                         </br>
-                                        <!--                            <p>-->
-                                        <!--                                <font >RC/DLA/2018/B/2764</font>-->
-                                        <!--                            </p>-->
+                                        <br>
+                                            <font>
+                                                <t t-if="o.partner_id.commercial_register_number">
+                                                    RCCM :
+                                                    <span t-field="o.partner_id.commercial_register_number"/>
+                                                </t>
+                                            </font>
+                                        </br>
                                     </td>
                                 </tr>
                                 <tr valign="top">
