--- a/servoo_logistic/views/operation_view.xml
+++ b/servoo_logistic/views/operation_view.xml
@@ -48,7 +48,7 @@
             <field name="name">servoo.logistic.operation.tree</field>
             <field name="model">servoo.logistic.operation</field>
             <field name="arch" type="xml">
-                <tree string="Operations">
+                <tree string="Operations" decoration-success="state == 'done'" decoration-info="state == 'open'" decoration-warning="state == 'draft'">
                     <field name="name" string="APM File Number"/>
                     <field name="agency_name" />
 <!--                    <field name="external_reference" />-->
@@ -60,7 +60,7 @@
                     <field name="volume" />
                     <field name="weight" />
                     <field name="goods_description" />
-                    <field name="state" />
+                    <field name="state" widget="badge" decoration-success="state == 'done'" decoration-info="state == 'open'" decoration-warning="state == 'draft'"/>
                 </tree>
             </field>
         </record>
@@ -82,7 +82,7 @@
                         attrs="{'invisible': ['|',('state', 'not in', ('open', 'done')), ('invoice_count','=',0)]}"/>
 
                         <button name="action_draft" states="cancel" type="object" string="Open" groups="servoo_logistic.logistic_group_manager"/>
-                        <button name="action_cancel" states="open,done" type="object" string="Cancel" groups="servoo_logistic.logistic_group_user"/>
+                        <button name="%(action_wizard_logistic_operation_cancel)d" states="draft,open,done" type="action" string="Cancel" groups="servoo_logistic.logistic_group_manager"/>
                         <field name="state" widget="statusbar" statusbar_visible="draft,open,done"/>
                     </header>
                     <sheet>
