--- a/servoo_stevedoring/views/stevedoring_file_view.xml
+++ b/servoo_stevedoring/views/stevedoring_file_view.xml
@@ -34,14 +34,14 @@
             <field name="name">servoo.stevedoring.file.tree</field>
             <field name="model">servoo.stevedoring.file</field>
             <field name="arch" type="xml">
-                <tree string="stevedoring Files">
+                <tree string="stevedoring Files" decoration-success="state == 'done'" decoration-info="state == 'open'" decoration-warning="state == 'draft'">
                     <field name="name" />
                     <field name="file_type_id" />
                     <field name="date" />
                     <field name="consignee_agent_id" />
                     <field name="vessel_id" />
                     <field name="voyage_number" />
-                    <field name="state" />
+                    <field name="state" widget="badge" decoration-success="state == 'done'" decoration-info="state == 'open'" decoration-warning="state == 'draft'" />
                 </tree>
             </field>
         </record>
@@ -69,7 +69,7 @@
                                                 string="Create Outturn Report" type="action"/>
                         <button name="action_draft" states="cancel" type="object" string="Open"
                                 groups="servoo_stevedoring.stevedoring_group_manager"/>
-                        <button name="action_cancel" states="open,done" type="object" string="Cancel" groups="servoo_stevedoring.stevedoring_group_user"/>
+                        <button name="%(action_wizard_stevedoring_file_cancel)d" states="open,done" type="action" string="Cancel" groups="servoo_stevedoring.stevedoring_group_manager"/>
                         <field name="state" widget="statusbar" statusbar_visible="draft,open,done"/>
                     </header>
                     <sheet>
