--- a/servoo_transit/views/transit_order_view.xml
+++ b/servoo_transit/views/transit_order_view.xml
@@ -5,20 +5,21 @@
             <field name="name">servoo.transit.order.tree</field>
             <field name="model">servoo.transit.order</field>
             <field name="arch" type="xml">
-                <tree string="Transit Orders">
+                <tree string="Transit Orders" decoration-success="state == 'done'" decoration-info="state == 'open'" decoration-warning="state == 'draft'">
                     <field name="name" />
                     <field name="external_reference" />
                     <field name="agency_name" />
                     <field name="operation_type" />
 <!--                    <field name="operation_type" />-->
-                    <field name="sub_operation_type" />
+<!--                    <field name="sub_operation_type" />-->
                     <field name="partner_id" />
+                    <field name="bill_of_lading" />
                     <field name="transport_mode_id" />
                     <field name="date_debut" />
                     <field name="volume" />
                     <field name="gross_weight" />
                     <field name="goods_description" />
-                    <field name="state" />
+                    <field name="state" widget="badge" decoration-success="state == 'done'" decoration-info="state == 'open'" decoration-warning="state == 'draft'"/>
                 </tree>
             </field>
         </record>
@@ -40,7 +41,7 @@
                         attrs="{'invisible': ['|',('state', 'not in', ('open', 'done')), ('invoice_count','=',0)]}"/>
 
                         <button name="action_draft" states="cancel" type="object" string="Open" groups="servoo_transit.transit_group_manager"/>
-                        <button name="action_cancel" states="open,done" type="object" string="Cancel" groups="servoo_transit.transit_group_user"/>
+                        <button name="%(action_wizard_transit_order_cancel)d" states="open,done" type="action" string="Cancel" groups="servoo_transit.transit_group_manager"/>
                         <field name="state" widget="statusbar" statusbar_visible="draft,open,done"/>
                     </header>
                     <sheet>
@@ -176,6 +177,25 @@
             </field>
         </record>
 
+        <record model="ir.ui.view" id="view_servoo_transit_search">
+            <field name="name">servoo.transit.order.search</field>
+            <field name="model">servoo.transit.order</field>
+            <field name="arch" type="xml">
+                <search string="Transit Order">
+                    <field name="name" />
+                    <field name="external_reference" />
+                    <field name="partner_id" />
+                    <field name="bill_of_lading" />
+                    <separator />
+                    <group expand="0" string="Group By">
+                        <filter string="Client" name="group_by_client" domain="[]" context="{'group_by': 'partner_id'}" />
+                        <filter string="State" name="group_by_state" domain="[]" context="{'group_by': 'state'}" />
+                        <filter string="Operation Type" name="group_by_operation_type" domain="[]" context="{'group_by': 'operation_type'}" />
+                    </group>
+                </search>
+            </field>
+        </record>
+
         <record id="action_transit_order" model="ir.actions.act_window">
             <field name="name">Transit Orders</field>
             <field name="type">ir.actions.act_window</field>
@@ -195,7 +215,7 @@
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">servoo.transit.order</field>
             <field name="view_mode">tree,form</field>
-            <field name="context">{}</field>
+            <field name="context">{'create': False, 'edit': False}</field>
             <field name="domain">[('state', 'in', ('open','done')), ('invoice_count','&lt;=',1)]</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
