--- a/servoo_finance/wizard/wizard_cashier_piece_view.xml
+++ b/servoo_finance/wizard/wizard_cashier_piece_view.xml
@@ -8,8 +8,8 @@
                <sheet>
                    <group string="Confirmation ?" />
                     <group col="2">
-                        <field name="cashier_piece_id" invisible="1" />
-                        <field name="state" invisible="1" />
+                        <field name="cashier_piece_id" invisible="0" readonly="1"/>
+                        <field name="state" invisible="0" readonly="1"/>
                         <field name="date" />
                         <field name="observation" />
                     </group>
