--- a/servoo_finance/wizard/wizard_cash_voucher_view.xml
+++ b/servoo_finance/wizard/wizard_cash_voucher_view.xml
@@ -4,7 +4,7 @@
         <field name="name">wizard.cash.voucher.form</field>
         <field name="model">servoo.cash.voucher.wizard</field>
         <field name="arch" type="xml">
-            <form string="Payment Request">
+            <form string="Cash Voucher">
                <sheet>
                    <group string="Confirmation ?" />
                     <group col="2">
@@ -18,7 +18,7 @@
                 <footer>
                     <button name="action_validate" string="Approve" type="object" class="oe_highlight" data-hotkey="q"/>
                     <button name="action_reject" string="Reject" type="object" class="btn-danger" data-hotkey="c"
-                            attrs="{'invisible': [('state', '!=', 'cashier_approval')]}"
+                            attrs="{'invisible': [('state', 'not in', ('service_approval', 'direction_approval'))]}"
                     />
                     <button string="Discard" class="btn-secondary" special="cancel" data-hotkey="z"/>
                 </footer>
