--- a/servoo_stevedoring/views/operation_view.xml
+++ b/servoo_stevedoring/views/operation_view.xml
@@ -10,6 +10,7 @@
                     <field name="date_debut" />
                     <field name="date_end" />
                     <field name="stevedoring_file_id" />
+                    <field name="shipping_file_id" />
                     <field name="operation_nature" />
                     <field name="name_of_responsible" />
                 </tree>
@@ -24,8 +25,9 @@
                     <sheet>
 <!--                        <group>-->
                             <group col="4">
-                                <field name="name" />
-                                <field name="stevedoring_file_id" required="1"/>
+                                <field name="name" colspan="4"/>
+                                <field name="stevedoring_file_id" required="0"/>
+                                <field name="shipping_file_id" required="0"/>
                                 <field name="date_debut" required="1"/>
                                 <field name="date_end" />
                                 <field name="shift" />
