--- a/servoo_stevedoring/views/stevedoring_menu.xml
+++ b/servoo_stevedoring/views/stevedoring_menu.xml
@@ -6,7 +6,10 @@
             web_icon="servoo_stevedoring,static/description/icon.png"/>
 
             <menuitem id="stevedoring_menu" name="Stevedoring" parent="stevedoring_menu_root" sequence="1"/>
-            <menuitem id="stevedoring_op_menu" name="Operations" parent="stevedoring_menu_root" sequence="2"/>
+        <menuitem id="shipping_sub_menu" name="Shipping" sequence="2" parent="stevedoring_menu_root">
+            <menuitem id="shipping_sub_file_menu"  action="servoo_shipping.action_shipping_file"  sequence="1"/>
+        </menuitem>
+            <menuitem id="stevedoring_op_menu" name="Operations" parent="stevedoring_menu_root" sequence="3"/>
 
                 <menuitem id="stevedoring_operation_menu" action="servoo_stevedoring.action_stevedoring_operation" parent="stevedoring_op_menu" sequence="1"/>
                 <menuitem id="stevedoring_outturn_report_menu" action="servoo_stevedoring.actions_outturn_report" parent="stevedoring_op_menu" sequence="2"/>
