--- a/servoo_stevedoring/wizard/wizard_outturn_report_view.xml
+++ b/servoo_stevedoring/wizard/wizard_outturn_report_view.xml
@@ -92,4 +92,96 @@
             <field name="view_mode">form</field>
             <field name="target">new</field>
         </record>
+
+    <record model="ir.ui.view" id="wizard_shipping_outturn_report_form">
+        <field name="name">wizard.shipping.outturn.report.form</field>
+        <field name="model">servoo.shipping.outturn.report.wizard</field>
+        <field name="arch" type="xml">
+            <form string="Shipping - Outturn Report">
+               <sheet>
+                        <group col="4">
+                            <field name="date" />
+                            <field name="date_debut" />
+                            <field name="date_end" />
+                        </group>
+                        <group col="4">
+                            <field name="consignee_id" widget="res_partner_many2one" colspan="2"
+                                           context="{'show_address': 1, 'show_vat': True}"
+                                           options='{"always_reload": True}' required="1"
+                            />
+                            <field name="shipping_file_id" required="1" readonly="1"/>
+                            <field name="vessel_id" />
+                            <field name="voyage_number" />
+                            <field name="loading_port" required="1"/>
+                            <field name="discharge_port" required="1"/>
+                        </group>
+                        <notebook>
+                            <page string="Bills of lading">
+                                <field name="line_ids" widget="one2many" mode="tree,form" required="1">
+                                    <tree>
+                                        <field name="bl_id" />
+                                        <field name="manifested_weight" />
+                                        <field name="shortage_weight" />
+                                        <field name="excess_weight" />
+                                        <field name="delivery_weight" />
+                                    </tree>
+                                    <form>
+                                        <sheet>
+                                            <group col="2">
+                                                <field name="bl_id" required="1" domain="['|',('notify_id', '=', parent.consignee_id), ('vessel_id', '=', parent.vessel_id), ('voyage_number', '=', parent.voyage_number)]"/>
+                                                <field name="note" />
+
+                                            </group>
+                                            <notebook>
+                                                <page string="Goods">
+                                                    <field name="bl_line_ids" widget="one2many" mode="tree, form" required="1">
+                                                        <tree>
+                                                            <field name="good_description" />
+                                                            <field name="manifested_weight" />
+                                                            <field name="shortage_weight" />
+                                                            <field name="excess_weight" />
+                                                            <field name="delivery_weight" />
+                                                        </tree>
+                                                        <form>
+                                                            <field name="good_description" colspan="2" required="1"/>
+                                                            <group string="Quantities" col="4">
+                                                                <field name="manifested_quantity" />
+                                                                <field name="unit_id" />
+                                                                <field name="shortage_quantity" />
+                                                                <field name="unit_id" />
+                                                                <field name="excess_quantity" />
+                                                                <field name="unit_id" />
+                                                                <field name="delivery_quantity" />
+                                                                <field name="unit_id" />
+                                                            </group>
+                                                            <group string="Tonnage" col="4">
+                                                                <field name="manifested_weight" />
+                                                                <field name="shortage_weight" />
+                                                                <field name="excess_weight" />
+                                                                <field name="delivery_weight" />
+                                                            </group>
+                                                        </form>
+                                                    </field>
+                                                </page>
+                                            </notebook>
+                                        </sheet>
+                                    </form>
+                                </field>
+                            </page>
+                        </notebook>
+                    </sheet>
+                <footer>
+                    <button name="action_validate" string="Validate" type="object" class="oe_highlight" data-hotkey="q"/>
+                    <button string="Discard" class="btn-secondary" special="cancel" data-hotkey="z"/>
+                </footer>
+            </form>
+        </field>
+    </record>
+
+    <record id="action_wizard_shipping_outturn_report" model="ir.actions.act_window">
+            <field name="name">Outturn Report</field>
+            <field name="res_model">servoo.shipping.outturn.report.wizard</field>
+            <field name="view_mode">form</field>
+            <field name="target">new</field>
+        </record>
 </odoo>
