--- a/servoo_shipping/views/shipping_file_view.xml
+++ b/servoo_shipping/views/shipping_file_view.xml
@@ -18,6 +18,7 @@
                     <field name="gross_weight" />
                     <field name="net_weight" />
                     <field name="state" widget="badge" decoration-success="state == 'done'" decoration-info="state == 'open'" decoration-warning="state == 'draft'"/>
+                    <field name="invoice_state" widget="badge" decoration-success="invoice_state == 'invoiced'" decoration-warning="invoice_state == 'not_invoiced'" />
                 </tree>
             </field>
         </record>
@@ -58,6 +59,8 @@
                                     help="Generate XML" groups="servoo_shipping.shipping_group_user"/>
 
                         </div>
+                        <field name="invoice_state" invisible="1" />
+                        <widget name="web_ribbon" title="Invoiced" attrs="{'invisible': [('invoice_state', '!=', 'invoiced')]}"/>
                             <group col="4">
                                 <field name="name" readonly="1"/>
                                 <field name="shipping_pda_id"/>
